# PromptWatch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  index.html  pyproject.toml  robots.txt  sitemap.xml  system-design.html
.github/workflows/: ci.yml
deploy/agent/: README.md  install-agent.sh
deploy/server/: .env.example  README.md  compose.yaml
docs/: architecture.md  operations.md  overview.html  security.md  sitemap.xml
scripts/: install.sh
src/promptward/agent/: cli_wrapper.py  enroll.py  forwarder.py  notifier.py  service.py  shipper.py
src/promptward/cli/: main.py
src/promptward/common/: compliance.py  config.py
src/promptward/server/: admin.py  audit.py  collector.py  dashboard.py  prune.py  reports.py
src/promptwatch/agent/: enroll.py  forwarder.py  identity.py  service.py  shipper.py  spool.py
src/promptwatch/cli/: main.py
src/promptwatch/common/: config.py  crypto.py  redact.py  security.py  storage.py
src/promptwatch/server/: admin.py  app.py  auth.py  collector.py  dashboard.py  reports.py  server_store.py
tests/: conftest.py  test_collector_admin.py  test_compliance.py  test_pii_security_fixes.py  test_security_redact.py  test_storage_spool_audit.py
